fix: define text align of label of filters

--- a/src/packages/uikit/HeaderFormGroup/styles.scss
+++ b/src/packages/uikit/HeaderFormGroup/styles.scss
@@ -12,9 +12,10 @@
     }
 
 
-    & label {
+    &__label {
         display: inline-block;
         font-size: 14px;
+        text-align: left !important;
         margin-bottom: 2px;
     }
 }
